force-app/main/default/objects/Screening_Run_Completed__e/Screening_Run_Completed__e.object-meta.xml
<CustomObject>
    <label>Screening Run Completed</label>
    <pluralLabel>Screening Runs Completed</pluralLabel>
</CustomObject>