force-app/main/default/objects/Screening_Run_Completed__e/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <description>Stores the 18-digit ID of the Candidate record. Platform Events do not support direct lookup relationships.</description>
    <label>Candidate ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>