force-app/main/default/objects/Screening_Run_Completed__e/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <description>The unique ID linking all results from a single screening run.</description>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>