force-app/main/default/objects/Screening_Run_Completed__e/fields/Final_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Status__c</fullName>
    <description>Stores the overall outcome, e.g., &quot;Action Required&quot; or &quot;Passed&quot;.</description>
    <label>Final Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>