force-app/main/default/objects/Screening_Run_Completed__e/fields/Rules_Passed__c.field-meta.xml
<CustomField>
    <fullName>Rules_Passed__c</fullName>
    <label>Rules_Passed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>