force-app/main/default/objects/Screening_Run_Completed__e/fields/Total_Rules__c.field-meta.xml
<CustomField>
    <fullName>Total_Rules__c</fullName>
    <label>Total_Rules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>